--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.4",
     "babel-minify": "^0.4.3",
-    "prop-types": "^15.6.2"
+    "prop-types": "^15.6.2",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
