--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "array-move": "^1.0.0",
     "react": "^16.5.2",
+    "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.5.2",
-    "react-draggable": "^3.0.5",
     "react-scripts": "2.0.5",
     "styled-components": "^4.0.2"
   },
