--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5",
-    "styled-components": "^4.0.2"
+    "styled-components": "^4.0.2",
+    "uniqid": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "prop-types": "^15.6.2"
+  }
 }
