--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5",
+    "socket.io-client": "^2.1.1",
+    "socket.io-react": "^1.2.0",
     "styled-components": "^4.0.2",
     "uniqid": "^5.0.3"
   },
