--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "array-move": "^1.0.0",
     "axios": "^0.18.0",
+    "random-name": "^0.1.2",
     "react": "^16.5.2",
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.5.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "socket.io-client": "^2.1.1",
     "socket.io-react": "^1.2.0",
