--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "array-move": "^1.0.0",
     "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "random-name": "^0.1.2",
     "react": "^16.5.2",
     "react-beautiful-dnd": "^9.0.2",
