--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "pm2 stop index.js && pm2 start index.js",
+    "start": "pm2 stop index.js || true && pm2 start index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
